src/Components/App/styles/App.scss
@import-normalize; /* bring in normalize.css styles */

body,
html {
  height: auto;
  margin: 0;
  padding: 0;
}

html {
  background: #1b0b35;
}

* {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
    Helvetica Neue, sans-serif;
  box-sizing: border-box;
}

.App {
  margin-top: 70px;

  a {
    outline: none;
    text-decoration: none;
    color: white;
  }
}

.fallback {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 28px;
  font-weight: bold;
  color: white;
}

